src/test/run-pass/pred-not-bool.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// this checks that a pred with a non-bool return
// type is rejected, even if the pred is never used

fn bad(_a: int) -> int { return 37; } //~ ERROR Non-boolean return type

pub fn main() { }
